# goit-web-hw-10

./: pyproject.toml
homework/authentication/: forms.py  urls.py  views.py
homework/authentication/static/authentication/: redirect.js
homework/authentication/templates/authentication/: login.html  logout.html  sign_in.html  sign_up.html
homework/authors/: urls.py  views.py
homework/authors/templates/authors/: author.html
homework/homework/: settings.py  urls.py
homework/homework/utils/: add_authors_and_quotes_to_mongo.py  authors.json  mongo_connection.py
homework/quotes/: forms.py  urls.py  views.py
homework/quotes/static/quotes/: styles.css
homework/quotes/templates/quotes/: add_author.html  add_quote.html  index.html
homework/quotes/templatetags/: extract.py
homework/secrets/: mongo_config.ini  postgres_config.ini
homework/templates/: base.html
