[tool.poetry]
name = "goit-web-hw-10"
version = "0.1.0"
description = ""
authors = ["ink404dot <94466285+ink404dot@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
pymongo = "^4.11"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
